molecule/end-to-end_demo/deploy_files/nginx/ingress-to-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ns 
  annotations:
    cert-manager.io/cluster-issuer: "root-ca-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.k8s.myorg.com
    secretName: nginx-tls
  rules:
  - host: nginx.k8s.myorg.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
